# relate_py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml  relate  setup.py
docs/: conf.py  fileformat.md  index.md  requirements.txt
relate_py/: __main__.py  data.py
relatepy/: __init__.py  __main__.py  basic_parse.py  data.pxd  data.py  io.py  utils.py
relatepy/pipeline/: __init__.pxd  __init__.py  _build_topology.py  _combine_sections.py  _finalize.py  _find_equivalent_branches.py  _get_branch_length.py  _paint.py  chunk.py  options.cpp  paint.py
src/: lib.rs
tests/: conftest.py  fixtures.py  test_io.py  test_pipeline.py  test_relate_all.py
