[project]
name = "relatepy"
version = "0.1.1"
readme = "README.md"
authors = [{ name = "Tang Ziya", email = "tcztzy@hotmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "anndata==0.8.0",
    "click==8.1.3",
    "click-log==0.4.0",
    "cython==3.0.0a11",
    "dask==2022.10.0",
    "pandas==1.5.0",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["pyproject-toml==0.0.10", "cython==3.0.0a11"]
build-backend = "pyproject_toml.build_system.build_backend"
