[project]
name = "relatepy"
version = "0.1.1"
readme = "README.md"
authors = [{ name = "Tang Ziya", email = "tcztzy@hotmail.com" }]
requires-python = ">=3.10"  # 3.11 & macOS need build h5py at Dec 3, 2022
dependencies = [
    "anndata==0.8.0",   # good data structure for human brain
    "click==8.1.3",     # better CLI
    "click-log==0.4.0", # better CLI log
    "cython==3.0.0a11", # cope with CXX codes and better performance
    "dask==2022.12.0",  # big data frame
    "numpy==1.23.5",    # de facto numerical standard
    "pandas==1.5.2",    # de facto data processing standard
]

[project.optional-dependencies]
test = ["pytest>=6.0", "pytest-cov"]

[build-system]
requires = ["pyproject-toml==0.0.10", "cython==3.0.0a11", "setuptools-rust>=1.4.0"]
build-backend = "pyproject_toml.build_system.build_backend"

[tool.pyright]
reportShadowedImports = false
