[project]
name = "relatepy"
version = "0.1.1"
readme = "README.md"
authors = [{ name = "Tang Ziya", email = "tcztzy@hotmail.com" }]
requires-python = ">=3.10"  # 3.11 & macOS need build h5py at Dec 3, 2022
dependencies = [
    "anndata==0.8.0",   # good data structure for human brain
    "click==8.1.3",     # better CLI
    "click-log==0.4.0", # better CLI log
    "cython==3.0.0a11", # cope with CXX codes and better performance
    "dask==2022.12.0",  # big data frame
    "numpy==1.23.5",    # de facto numerical standard
    "pandas==1.5.2",    # de facto data processing standard
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
test = ["pytest>=6.0", "pytest-cov>=4.0"]
docs = ["myst-parser>=0.18,<0.19"]
lint = ["black>=22.10.0", "mypy>=0.991"]
dev = ["relatepy[test,docs,lint]"]

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.pyright]
reportShadowedImports = false
